- Save window settings also when using File/Close

KOfficeUI:
- Improved unit widgets

KoText:
- Changing a style in the style manager remembered a wrong "following style",
  so later changes in the style manager wouldn't propagate correctly (#47377)
- Fixed wrong position of suffix in numbered right-to-left paragraphs (#47178)

Changes between KOffice-1.3 and KOffice-1.3.1
=============================================
Allow to build with automake-1.8

KOfficeCore:
- Changed .desktop file setup so that changes to the K menu structure,
  to file-program associations, or other distribution customizations cannot
  prevent KOffice applications from starting.
- Fixed parsing of number+unit, due to change in Qt 3.3. Fixes problems
  when opening OOWriter documents in particular.
- Don't show the filter dialog when generating thumbnails
- Improved error handling to catch "partition full" problems.

KOfficeUI:
- Fix overwriting of templates (#73537)
- Fix loading icons when creating templates
- Allow template icons up to 64x64 instead of 60x60 and scale better if too big

KoText:
- Date variables for printing-date, last-modified, and creation-date were
  not loaded correctly.
- Background spellchecking works again
- Fixed crash during background spellchecking (refcounting of formats)
- Fixed race condition during background spellchecking (leading to misplaced red underlines)
- Repaint paragraph after bg spell checking, in all cases (errors or not),
  otherwise newly-added-to-the-dictionary words were still red-underlined (#56506).
- Fixed hyphenation checkbox not correctly set in font dialog
- Fixed wrong hyphenation in many cases, due to wrong word sent to hyphenation engine
- Font dialog usability: turn radiobuttons superscript/subscript into
  checkboxes to make it possible to deactivate both.
- Usability in style dialog: when creating a new style, select it as the
  'next style' for itself (#45868).
- Allow decimal values in "multiply" (proportional) linespacing.