@@ -11,6 +11,9 @@ KoText:
 - Changing a style in the style manager remembered a wrong "following style",
   so later changes in the style manager wouldn't propagate correctly (#47377)
 - Fixed wrong position of suffix in numbered right-to-left paragraphs (#47178)
+- Fixed formatting bug, where an inline formula or any other big character after
+the paragraph counter, would make the paragraph counter disappear (#82609).
+
 
 Changes between KOffice-1.3 and KOffice-1.3.1
 =============================================
